@@ -177,11 +177,6 @@ class Unbundler:
             handle = os.fdopen(fd, 'wb')
             handle.write(data)
             handle.close()
-
-            # os.rename on Win32 is not deleting the target file
-            # if it exists, so remove it before
-            if os.path.exists(path):
-                os.unlink(path)
             os.rename(tempname, path)
         return directory
 
